syntax = "proto3";

package code;

option go_package = "code/proto;proto";

service CoordinatorService {
  rpc Txn (TxnRequest) returns (TxnResponse);
}

message TxnRequest {
  string id = 1;
  string op = 2;
  repeated string accounts = 3;
  int32 amount = 4;
}

message TxnResponse {
  bool accepted = 1;
}